--- a/touaki/index.html
+++ b/touaki/index.html
@@ -70,7 +70,9 @@
             </div>
             </section>   
             <section class="member">
-                <img src="photo/threecoffe.jpg" alt="會員">
+                <div class="member-img">
+                    <img src="photo/threecoffe.jpg" alt="會員">
+                </div>
                 <div class="member-text">
                     <h2>會員優惠</h2>
                     <p>我們咖啡店提供會員優惠以回饋我們忠實的顧客。</p>
@@ -94,19 +96,20 @@
             <div class="footer">
                 <div class="opentime">
                     <i class="fa-regular fa-clock"></i>
-                    <h2>營業時間</h2>
-                    <p>
-                    豆燒咖啡館 
-                    營業時間:11:00~24:00
-                    每周一公休，國定假日都休假
-                    </p>
-                    <p>服務電話:03-1234567</p>
+                    <div class="opentime-text">
+                        <h2>營業時間</h2>
+                        <p>
+                        豆燒咖啡館 
+                        營業時間:11:00~24:00
+                        每周一公休，國定假日都休假
+                        </p>
+                        <p>服務電話:03-1234567</p>
+                    </div>
                 </div>
-                <div class="cafe">
-                    <a href="#">
-                        <i class="fa-solid fa-mug-saucer"></i>
-                        <h3>咖啡</h3>
-                    </a>
+                <div class="time">
+                    <img src="photo/solar_sun-fog-linear.png" alt="日落">
+                    <p>今日日落時間</p>
+                    <p class="time-nb">17:53</p>
                 </div>
                 <div class="menu-link">
                     <a href="https://rahaydn.github.io/cid101/project/menu.html">
@@ -120,10 +123,11 @@
                         <h3>預約</h3>
                     </a>
                 </div>
-                <div class="time">
-                    <img src="photo/solar_sun-fog-linear.png" alt="日落">
-                    <p>今日日落時間</p>
-                    <p class="time-nb">17:53</p>
+                <div class="cafe">
+                    <a href="#">
+                        <i class="fa-solid fa-mug-saucer"></i>
+                        <h3>咖啡</h3>
+                    </a>
                 </div>
             </div>
             <div class="footer-logo">
