--- a/touaki/index.html
+++ b/touaki/index.html
@@ -15,10 +15,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="head">
+    <header class="head" id="top">
         <div class="head-nav">
             <nav>
-                <div class="nav-log"><a href="https://rahaydn.github.io/cid101/project/index.html" class="logo">
+                <div class="nav-log"><a href="https://rahaydn.github.io/cid101/touaki/index.html" class="logo">
                     <img src="photo/touaki (2).png" alt="logo"></a>
                 </div>
                     <ul id="menu">
@@ -131,6 +131,13 @@
                 </div>
             </div>
             <div class="footer-logo">
+                
+                <div class="top-btn">
+                    <a href="#top" class="back-to-top">
+                        <i class="fa-solid fa-arrow-up"></i><br>    
+                        <span>Back to top</span> 
+                    </a>
+                </div>
                 <img src="photo/touaki.png" alt="logo">
                 <div class="address">
                     <div class="logo-phone"><img src="photo/phone.png" alt=""><p>03-1234567</p></div>
