--- a/touaki/index.html
+++ b/touaki/index.html
@@ -36,6 +36,7 @@
                     </button>
                 </nav>
         </div>
+    </header>
             <div class="front-img">
                 <img src="photo/db.jpg" alt="首頁圖">
                 <h1 class="text">Delicious Coffee Shop</h1>
@@ -131,7 +132,6 @@
                 </div>
             </div>
             <div class="footer-logo">
-                
                 <div class="top-btn">
                     <a href="#top" class="back-to-top">
                         <i class="fa-solid fa-arrow-up"></i><br>    
@@ -152,7 +152,7 @@
                 </div>
             </div>   
         </div>
-    </div>
+    
 
 
 
