--- a/touaki/index.html
+++ b/touaki/index.html
@@ -156,55 +156,8 @@
 
 
 
-<script>
-        document.getElementById('btnHam').addEventListener('click', function () {
-        var menu = document.getElementById('menu');
-        menu.classList.toggle('show');
-        });
-        
-</script>
-<script>
-    const ribbon = document.querySelector('.ribbon');
-    const ribbons = document.querySelector('.ribbons');
 
-    function handleResize() {
-        if (window.innerWidth >= 768) {
-            ribbon.style.right = '0px';
-            ribbons.style.right = '0px';
-            ribbon.removeEventListener('mouseout', handleMouseOut);
-            ribbons.removeEventListener('mouseout', handleMouseOut);
-        } else {
-            ribbon.style.right = '-100px';
-            ribbons.style.right = '-100px';
-            ribbon.addEventListener('mouseout', handleMouseOut);
-            ribbons.addEventListener('mouseout', handleMouseOut);
-        }
-    }
-
-    function handleMouseOut() {
-        ribbon.style.right = '-100px';
-        ribbons.style.right = '-100px';
-    }
-
-    handleResize();
-
-    window.addEventListener('resize', () => {
-        handleResize();
-    });
-
-    ribbon.addEventListener('mouseover', () => {
-        ribbon.style.right = '0px';
-    });
-
-    ribbon.addEventListener('mouseout', handleMouseOut);
-
-    ribbons.addEventListener('mouseover', () => {
-        ribbons.style.right = '0px';
-    });
-
-    ribbons.addEventListener('mouseout', handleMouseOut);
-
-</script>
+<script src="new.js"></script>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
   AOS.init();
