--- a/touaki/menu.html
+++ b/touaki/menu.html
@@ -63,7 +63,7 @@
             </ul>
         </nav>
     <div class="coffee-bg">
-        <div class="flexslider" style="width:350px; margin-left:200px;">
+        <div class="flexslider" style="width:350px;">
             <ul class="slides">
                 <li><img src="photo/a1-fotor-2024050842814.jpg" alt="檸檬咖啡" width="350" height="250"></li>
                 <li><img src="photo/coffee.jpg" alt="美式咖啡" width="350" height="250"></li>
@@ -71,25 +71,25 @@
             </ul>
         </div>
         <div class="menu-txt">
-            <h3>黑咖啡 BLACK COFFE</h3>
-            <h4>冠軍黑咖啡<span>55</span><span>70</span></h4>
+            <h2>黑咖啡 BLACK COFFE</h2>
+            <h3>冠軍黑咖啡<span>55</span><span>70</span></h3>
             <p>Champion black coffe</p>
             <p class="remark">阿倫比亞水洗豆/中深烘培</p>
-            <h4>冠軍黑咖啡<span>65</span><span>80</span></h4>
+            <h3>冠軍黑咖啡<span>65</span><span>80</span></h3>
             <p>Seasonal coffe</p>
-            <h4>檸檬黑咖啡<span>80</span><span>100</span></h4>
+            <h3>檸檬黑咖啡<span>80</span><span>100</span></h3>
             <p>lemon black coffe</p>
-            <h3>其他 OTHERS</h3>
-            <h4 class="red">紅茶拿鐵<span>90</span><span>110</span></h4>
+            <h2>其他 OTHERS</h2>
+            <h3 class="red">紅茶拿鐵<span>90</span><span>110</span></h3>
             <p>Black Tea Latte</p>
             <p class="remark">錫蘭紅茶/鮮乳</p>
-            <h4 class="green">抹茶拿鐵<span>90</span><span>110</span></h4>
+            <h3 class="green">抹茶拿鐵<span>90</span><span>110</span></h3>
             <p>Matcha Latte</p>
             <p class="remark">日本抹茶/鮮乳</p>
         </div>
     </div>
     <div class="sandwich">
-        <div class="flexslider" style="width:350px; margin-left:200px;">
+        <div class="flexslider" style="width:350px;">
             <ul class="slides">
                 <li><img src="photo/sw.jpg" alt="" width="350" height="250"></li>
                 <li><img src="photo//swc.jpg" alt="" width="350" height="250"></li>
@@ -97,24 +97,24 @@
             </ul>
         </div>
         <div class="menu-txt">
-            <h3>三明治 HOT SANDWICH</h3>
-            <h4>雞肉三明治<span>150</span></h4>
+            <h2>三明治 HOT SANDWICH</h2>
+            <h3>雞肉三明治<span>150</span></h3>
             <p>Chicken Sandwich</p>
-            <h4>牛肉三明治<span>180</span></h4>
+            <h3>牛肉三明治<span>180</span></h3>
             <p>Beef Sandwich</p>
-            <h4>古巴三明治<span>100</span></h4>
+            <h3>古巴三明治<span>100</span></h3>
             <p>Cuban Sandwich</p>
-            <h4>起司三明治<span>100</span></h4>
+            <h3>起司三明治<span>100</span></h3>
             <p>Cheese Sandwich</p>
-            <h3>吐司 TOAST</h3>
-            <h4 class="latte">奶酥吐司<span>75</span></h4>
+            <h2>吐司 TOAST</h2>
+            <h3 class="latte">奶酥吐司<span>75</span></h3>
             <p>Matcha Latte</p>
-            <h4 class="toast">巧克力吐司<span>75</span></h4>
+            <h3 class="toast">巧克力吐司<span>75</span></h3>
             <p>Chocolate Toast</p>
         </div>
     </div>
     <div class="cake-bg">
-        <div class="flexslider" style="width:350px; margin-left:200px;">
+        <div class="flexslider" style="width:350px;">
             <ul class="slides">
                 <li><img src="photo/cake-fotor-2024050843226.jpg" alt="" width="350" height="250"></li>
                 <li><img src="photo//cake2.jpg" alt="" width="350" height="250"></li>
@@ -122,17 +122,17 @@
             </ul>
         </div>
         <div class="menu-txt">
-            <h3>甜點 DESSERT</h3>
-            <h4 class="pie">岩燒黃金乳酪派<span>65</span></h4>
+            <h2>甜點 DESSERT</h2>
+            <h3 class="pie">岩燒黃金乳酪派<span>65</span></h3>
             <p>Cream Cheese Pie</p>
-            <h4 class="cake">藍莓慕斯蛋糕<span>65</span></h4>
+            <h3 class="cake">藍莓慕斯蛋糕<span>65</span></h3>
             <p>Blueberry Mousse Cake</p>
-            <h4>小米甜甜圈<span>35</span></h4>
+            <h3>小米甜甜圈<span>35</span></h3>
             <p>Millet Donuts</p>
-            <h3>沙拉 Salad</h3>
-            <h4 class="salad">雞肉沙拉<span>120</span></h4>
+            <h2>沙拉 Salad</h2>
+            <h3 class="salad">雞肉沙拉<span>120</span></h3>
             <p>Chicken Salad</p>
-            <h4 class="garden">田園沙拉<span>120</span></h4>
+            <h3 class="garden">田園沙拉<span>120</span></h3>
             <p>Garden Salad</p>
         </div>
     </div>
@@ -155,7 +155,8 @@
             <a href="#"><img src="photo/Vector (2).png" alt="fb"></a>
             <a href="#"><img src="photo/Vector (3).png" alt="instagram"></a>
         </div>
-    </div> 
+    </div>
+    <script src="new.js"></script> 
     <script>
         $(window).load(function() {
             $('.flexslider').flexslider({
