--- a/touaki/Login.html
+++ b/touaki/Login.html
@@ -4,13 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="new.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Condiment&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
     <header class="head" id="top">
@@ -20,7 +14,7 @@
                     <img src="photo/touaki (2).png" alt="logo"></a>
                 </div>
                     <ul id="menu">
-                        <li><a href="https://rahaydn.github.io/cid101/touaki/news.html"><span data-txt="最新消息">最新消息</span></a>
+                        <li><a href="https://rahaydn.github.io/cid101/project/news.html"><span data-txt="最新消息">最新消息</span></a>
                         </li>
                         <li><a href="https://rahaydn.github.io/cid101/touaki/menu.html"><span data-txt="門市菜單">門市菜單</span></a>
                         </li>
@@ -47,57 +41,23 @@
                 </a>
             </div>
     </header>
-    <div class="news-img">
-        <img src="photo/7ca42e4ff366cf7e8ce6b150bfb7b2d9.jpg" alt="消息">
-        <h1 class="txt">最新消息</h1>
-    </div>
     <div>
         <nav class="breadcrumb">
             <ul>
                 <li><a href="https://rahaydn.github.io/cid101/project/index.html">首頁</a></li>
-                <li><a href="https://rahaydn.github.io/cid101/touaki/news.html">最新消息</a> </li> 
+                <li><a href="https://rahaydn.github.io/cid101/project/news.html">會員登入</a> </li> 
             </ul>
         </nav>
     </div>
-    <div class="news">
-        <div class="btn">
-            <button  class="active">全部消息</button>
-            <button >優惠訊息</button>
-            <button>活動訊息</button>
-        </div>
-        <div id="content1" class="article">
-            <ul class="event">
-                <li><a href="#">
-                    <h4>新品上市/耶加雪菲濾掛咖啡</h4>
-                    <p>活動日期:2024/04/30</p>
-                </a></li>
-                <li><a href="#">
-                    <h4>2024年珍食計畫</h4>
-                    <p>活動日期:2024/04/20</p>
-                </a></li>
-                <li><a href="#">
-                    <h4>輕食新選擇．濃郁好滋味</h4>
-                    <p>活動日期:2024/04/01-14</p>
-                </a></li>
-                <li><a href="#">
-                    <h4>新春・優惠再加碼，3天享85折</h4>
-                    <p>活動日期:2024/03/04-06</p>
-                </a></li>
-                <li><a href="#">
-                    <h4>濾掛咖啡任選2盒(含)以上・總金額5折</h4>
-                    <p>活動日期:2024/02/20-24</p>
-                </a></li>
-                <li><a href="#">
-                    <h4>自備飲料杯省五元</h4>
-                    <p>即日起</p>
-                </a></li>
-                <li><a href="#">
-                    <h4>門市內用飲料續杯優惠</h4>
-                    <p>即日起</p>
-                </a></li>
-            </ul>
+    <div class="LoginContainer">
+        <div class="ParagraphBody">
+            <div class="Parag-img"></div>
+            <div class="FlowContainer">
+                <div class="FormTitle"></div>
+            </div>
         </div>
     </div>
+
     <div class="footer-logo">
         <div class="top-btn">
             <a href="#top" class="back-to-top">
