--- a/touaki/menu.html
+++ b/touaki/menu.html
@@ -23,7 +23,7 @@
                     <img src="photo/touaki (2).png" alt="logo"></a>
                 </div>
                     <ul id="menu">
-                        <li><a href="https://rahaydn.github.io/cid101/project/news.html"><span data-txt="最新消息">最新消息</span></a>
+                        <li><a href="https://rahaydn.github.io/cid101/touaki/news.html"><span data-txt="最新消息">最新消息</span></a>
                         </li>
                         <li><a href="https://rahaydn.github.io/cid101/touaki/menu.html"><span data-txt="門市菜單">門市菜單</span></a>
                         </li>
